BMERCP/src/Tree2CTransformation/Tree2CParser.java
// Generated from E://EclipseWorkspaces//GUIProjectWorkSpace//BMERCP//src//Tree2CTransformation//Tree2C.g4 by ANTLR 4.13.1

package Tree2CTransformation;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Tree2CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, WS=55, PRINT_TAG_OPEN=56, PRINT_TAG_CLOSE=57, PRINT_TEXT=58, 
		LT=59, GT=60, AND=61, INCLUDE=62, DEFINE=63, TYPEDEF=64, ENUM=65, FOR_VOLATILE=66, 
		FOR=67, WHILE=68, EQEQ=69, EQ=70, NOTEQ=71, PLUSPLUS=72, GTEQ=73, LTEQ=74, 
		STAR=75, PLUS=76, MINUS=77, MINUSMINUS=78, MINUSEQUAL=79, PLUSEQUAL=80, 
		EQUALMINUS=81, EQUALPLUS=82, IF=83, ELSE=84, ELSEIF=85, SWITCH_CASE=86, 
		SWITCH_DEFAULT=87, VOID=88, EXTERN=89, UINT8_T=90, UINT32_T=91, OSTHREADID=92, 
		INT=93, CHAR=94, TICKTYPE_T=95, OSEVENT=96, FLOAT=97, LONGINT=98, CONSTINT=99, 
		FUNCTION_CALL=100, COMMENT=101, STATEMENT=102, COMPONENT=103, PARAMETER=104, 
		SWITCH_CASE_TAG=105, DECLARATION_OPEN=106, DECLARATION_CLOSE=107, ISGLOBAL=108, 
		DATATYPE=109, NAME=110, VALUE=111, SIZE=112, INITIAL_VALUE=113, ID=114, 
		NUMBER=115, STRING=116, SLASH=117, LBRACE=118, RBRACE=119, LPAREN=120, 
		RPAREN=121, SEMICOLON=122, END_TAG=123, PRINTF=124, DISPLAY=125, STARR=126;
	public static final int
		RULE_system = 0, RULE_preprocessorDirective = 1, RULE_includeDirective = 2, 
		RULE_systemInclude = 3, RULE_localInclude = 4, RULE_declaration = 5, RULE_enumDecl = 6, 
		RULE_enumList = 7, RULE_attribute = 8, RULE_functionprototype = 9, RULE_component = 10, 
		RULE_parameter = 11, RULE_statement = 12, RULE_ifstatement = 13, RULE_return = 14, 
		RULE_switch = 15, RULE_switch_case = 16, RULE_loop = 17, RULE_assignment = 18, 
		RULE_leftAttribute = 19, RULE_operatorOrEmpty = 20, RULE_assignedSide = 21, 
		RULE_functioncall = 22, RULE_comment = 23, RULE_print = 24, RULE_dataTypes = 25, 
		RULE_expression = 26, RULE_operator = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"system", "preprocessorDirective", "includeDirective", "systemInclude", 
			"localInclude", "declaration", "enumDecl", "enumList", "attribute", "functionprototype", 
			"component", "parameter", "statement", "ifstatement", "return", "switch", 
			"switch_case", "loop", "assignment", "leftAttribute", "operatorOrEmpty", 
			"assignedSide", "functioncall", "comment", "print", "dataTypes", "expression", 
			"operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<preprocessordirective'", "'keyword='", "'name=\"'", "'\"'", 
			"'value=\"'", "'<includedirective'", "'&lt;'", "'>\"'", "'name='", "'<enum'", 
			"'enumID=\"'", "'\">'", "'</enum>'", "'<enumlist'", "'enumItem=\"'", 
			"'<attribute'", "'='", "'\"\"'", "'<functionprototype'", "'returnType='", 
			"'functionName='", "'>'", "'</functionprototype>'", "'<component'", "'type='", 
			"'</component>'", "'<parameter'", "'qualifier'", "'pointer'", "'<statement>'", 
			"'</statement>'", "'<if'", "'variable='", "'operator='", "'</if>'", "'<statement'", 
			"'name=\"return\"'", "'<switch'", "'keyword=\"switch\"'", "'</switch>'", 
			"'<switchcase'", "'</switchcase>'", "'<loop'", "'initial=\"'", "'condition=\"'", 
			"'increment=\"'", "'</loop>'", "'<assignment'", "'leftAttribute='", "'AssignedSide='", 
			"'<functioncall'", "'parameterString='", "'<comment'", "'commentText='", 
			null, "'<print'", "'/>'", "'printText='", null, null, null, "'\"#include\"'", 
			"'\"#define\"'", "'typedef'", "'enum'", "'\"for volatile\"'", "'\"for\"'", 
			"'while'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'keyword=\"if\"'", "'keyword=\"else\"'", "'keyword=\"else if\"'", 
			"'keyword=\"case\"'", "'keyword=\"default\"'", "'\"void\"'", "'\"extern\"'", 
			"'\"uint8_t\"'", "'\"uint32_t\"'", "'\"osThreadId\"'", "'\"int\"'", "'\"char\"'", 
			"'\"TickType_t\"'", "'\"osEvent\"'", "'\"float\"'", "'\"longint\"'", 
			"'\"const int\"'", "'functioncall'", "'comment'", "'statement'", "'component'", 
			"'parameter'", "'switchcase'", "'<declaration>'", "'</declaration>'", 
			"'isGlobal'", "'dataType'", "'name'", "'value'", "'size'", "'initialValue'", 
			null, null, null, "'/'", "'{'", "'}'", "'('", "')'", "';'", "'</dSML:System>'", 
			"'printf'", "'$display'", "'logic[31:0]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "WS", "PRINT_TAG_OPEN", "PRINT_TAG_CLOSE", 
			"PRINT_TEXT", "LT", "GT", "AND", "INCLUDE", "DEFINE", "TYPEDEF", "ENUM", 
			"FOR_VOLATILE", "FOR", "WHILE", "EQEQ", "EQ", "NOTEQ", "PLUSPLUS", "GTEQ", 
			"LTEQ", "STAR", "PLUS", "MINUS", "MINUSMINUS", "MINUSEQUAL", "PLUSEQUAL", 
			"EQUALMINUS", "EQUALPLUS", "IF", "ELSE", "ELSEIF", "SWITCH_CASE", "SWITCH_DEFAULT", 
			"VOID", "EXTERN", "UINT8_T", "UINT32_T", "OSTHREADID", "INT", "CHAR", 
			"TICKTYPE_T", "OSEVENT", "FLOAT", "LONGINT", "CONSTINT", "FUNCTION_CALL", 
			"COMMENT", "STATEMENT", "COMPONENT", "PARAMETER", "SWITCH_CASE_TAG", 
			"DECLARATION_OPEN", "DECLARATION_CLOSE", "ISGLOBAL", "DATATYPE", "NAME", 
			"VALUE", "SIZE", "INITIAL_VALUE", "ID", "NUMBER", "STRING", "SLASH", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "SEMICOLON", "END_TAG", "PRINTF", 
			"DISPLAY", "STARR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tree2C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Tree2CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Tree2CParser.EOF, 0); }
		public List<IncludeDirectiveContext> includeDirective() {
			return getRuleContexts(IncludeDirectiveContext.class);
		}
		public IncludeDirectiveContext includeDirective(int i) {
			return getRuleContext(IncludeDirectiveContext.class,i);
		}
		public List<PreprocessorDirectiveContext> preprocessorDirective() {
			return getRuleContexts(PreprocessorDirectiveContext.class);
		}
		public PreprocessorDirectiveContext preprocessorDirective(int i) {
			return getRuleContext(PreprocessorDirectiveContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<PrintContext> print() {
			return getRuleContexts(PrintContext.class);
		}
		public PrintContext print(int i) {
			return getRuleContext(PrintContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public SystemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_system; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).enterSystem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).exitSystem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Tree2CVisitor ) return ((Tree2CVisitor<? extends T>)visitor).visitSystem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SystemContext system() throws RecognitionException {
		SystemContext _localctx = new SystemContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_system);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 81064793309446210L) != 0) || _la==DECLARATION_OPEN) {
				{
				setState(62);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
					{
					setState(56);
					includeDirective();
					}
					break;
				case T__0:
					{
					setState(57);
					preprocessorDirective();
					}
					break;
				case T__52:
					{
					setState(58);
					comment();
					}
					break;
				case PRINT_TAG_OPEN:
					{
					setState(59);
					print();
					}
					break;
				case DECLARATION_OPEN:
					{
					setState(60);
					declaration();
					}
					break;
				case T__23:
					{
					setState(61);
					component();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreprocessorDirectiveContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(Tree2CParser.DEFINE, 0); }
		public TerminalNode ID() { return getToken(Tree2CParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(Tree2CParser.NUMBER, 0); }
		public TerminalNode PRINT_TAG_CLOSE() { return getToken(Tree2CParser.PRINT_TAG_CLOSE, 0); }
		public PreprocessorDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocessorDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).enterPreprocessorDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).exitPreprocessorDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Tree2CVisitor ) return ((Tree2CVisitor<? extends T>)visitor).visitPreprocessorDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreprocessorDirectiveContext preprocessorDirective() throws RecognitionException {
		PreprocessorDirectiveContext _localctx = new PreprocessorDirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preprocessorDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__0);
			setState(70);
			match(T__1);
			setState(71);
			match(DEFINE);
			setState(72);
			match(T__2);
			setState(73);
			match(ID);
			setState(74);
			match(T__3);
			setState(75);
			match(T__4);
			setState(76);
			match(NUMBER);
			setState(77);
			match(T__3);
			setState(78);
			match(PRINT_TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncludeDirectiveContext extends ParserRuleContext {
		public SystemIncludeContext systemInclude() {
			return getRuleContext(SystemIncludeContext.class,0);
		}
		public LocalIncludeContext localInclude() {
			return getRuleContext(LocalIncludeContext.class,0);
		}
		public IncludeDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).enterIncludeDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).exitIncludeDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Tree2CVisitor ) return ((Tree2CVisitor<? extends T>)visitor).visitIncludeDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeDirectiveContext includeDirective() throws RecognitionException {
		IncludeDirectiveContext _localctx = new IncludeDirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_includeDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__5);
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(81);
				systemInclude();
				}
				break;
			case 2:
				{
				setState(82);
				localInclude();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemIncludeContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(Tree2CParser.INCLUDE, 0); }
		public TerminalNode ID() { return getToken(Tree2CParser.ID, 0); }
		public TerminalNode PRINT_TAG_CLOSE() { return getToken(Tree2CParser.PRINT_TAG_CLOSE, 0); }
		public SystemIncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemInclude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).enterSystemInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).exitSystemInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Tree2CVisitor ) return ((Tree2CVisitor<? extends T>)visitor).visitSystemInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SystemIncludeContext systemInclude() throws RecognitionException {
		SystemIncludeContext _localctx = new SystemIncludeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_systemInclude);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__1);
			setState(86);
			match(INCLUDE);
			setState(87);
			match(T__2);
			setState(88);
			match(T__6);
			setState(89);
			match(ID);
			setState(90);
			match(T__7);
			setState(91);
			match(PRINT_TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LocalIncludeContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(Tree2CParser.INCLUDE, 0); }
		public TerminalNode ID() { return getToken(Tree2CParser.ID, 0); }
		public TerminalNode PRINT_TAG_CLOSE() { return getToken(Tree2CParser.PRINT_TAG_CLOSE, 0); }
		public LocalIncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localInclude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).enterLocalInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).exitLocalInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Tree2CVisitor ) return ((Tree2CVisitor<? extends T>)visitor).visitLocalInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalIncludeContext localInclude() throws RecognitionException {
		LocalIncludeContext _localctx = new LocalIncludeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_localInclude);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__1);
			setState(94);
			match(INCLUDE);
			setState(95);
			match(T__8);
			setState(96);
			match(T__3);
			setState(97);
			match(ID);
			setState(98);
			match(T__3);
			setState(99);
			match(PRINT_TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode DECLARATION_OPEN() { return getToken(Tree2CParser.DECLARATION_OPEN, 0); }
		public TerminalNode DECLARATION_CLOSE() { return getToken(Tree2CParser.DECLARATION_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<EnumDeclContext> enumDecl() {
			return getRuleContexts(EnumDeclContext.class);
		}
		public EnumDeclContext enumDecl(int i) {
			return getRuleContext(EnumDeclContext.class,i);
		}
		public List<FunctionprototypeContext> functionprototype() {
			return getRuleContexts(FunctionprototypeContext.class);
		}
		public FunctionprototypeContext functionprototype(int i) {
			return getRuleContext(FunctionprototypeContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Tree2CVisitor ) return ((Tree2CVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(DECLARATION_OPEN);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9007199255331840L) != 0)) {
				{
				setState(106);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__15:
					{
					setState(102);
					attribute();
					}
					break;
				case T__9:
					{
					setState(103);
					enumDecl();
					}
					break;
				case T__18:
					{
					setState(104);
					functionprototype();
					}
					break;
				case T__52:
					{
					setState(105);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(DECLARATION_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Tree2CParser.ID, 0); }
		public EnumListContext enumList() {
			return getRuleContext(EnumListContext.class,0);
		}
		public EnumDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).enterEnumDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Tree2CListener ) ((Tree2CListener)listener).exitEnumDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Tree2CVisitor ) return ((Tree2CVisitor<? extends T>)visitor).visitEnumDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumDeclContext enumDecl() throws RecognitionException {
		EnumDeclContext _localctx = new EnumDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_enumDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__9);
			setState(114);
			match(T__10);
			setState(115);
			match(ID);
			setState(116);
			match(T__11);
			setState(117);
			enumList();
			setState(118);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
